--- a/product_sales_analysis_notebook.ipynb
+++ b/product_sales_analysis_notebook.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "import glob"
+    "import glob\n",
+    "\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -365,11 +367,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -395,53 +392,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change datatypes\n",
+    "df[\"Order ID\"] = df[\"Order ID\"].astype('int')\n",
+    "df[\"Quantity Ordered\"] = df[\"Quantity Ordered\"].astype('int')\n",
+    "df[\"Price Each\"] = df[\"Price Each\"].astype('float')\n",
+    "df[\"Order Date\"] = pd.to_datetime(df['Order Date'], format='%m/%d/%y %H:%M')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Transformation\n",
+    "This step includes adding sales (price * qty), as well as extracting month and year from Order Date."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract month and year from Order Date\n",
+    "df['month'] = df['Order Date'].dt.month\n",
+    "df['month_name'] = df['Order Date'].dt.strftime('%b')\n",
+    "df['year'] = df['Order Date'].dt.year\n",
+    "df['year_month'] = df['Order Date'].dt.strftime('%Y-%m')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create new columns for total sales\n",
+    "df['sales'] = df['Quantity Ordered'] * df['Price Each']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/gw/8gmr5ln56wjfgdr2ctyq4_600000gn/T/ipykernel_12395/1351736179.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[\"Order ID\"] = df[\"Order ID\"].astype(int)\n",
-      "/var/folders/gw/8gmr5ln56wjfgdr2ctyq4_600000gn/T/ipykernel_12395/1351736179.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[\"Quantity Ordered\"] = df[\"Quantity Ordered\"].astype(int)\n",
-      "/var/folders/gw/8gmr5ln56wjfgdr2ctyq4_600000gn/T/ipykernel_12395/1351736179.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[\"Price Each\"] = df[\"Price Each\"].astype(float)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'strftime'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/gw/8gmr5ln56wjfgdr2ctyq4_600000gn/T/ipykernel_12395/1351736179.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Quantity Ordered\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Quantity Ordered\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Price Each\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Price Each\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Order Date\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Order Date\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%m/%d/%y %H:%M\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/opt/anaconda3/envs/py_main/lib/python3.9/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5900\u001b[0m         ):\n\u001b[1;32m   5901\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5902\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5903\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5904\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'strftime'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Purchase Address</th>\n",
+       "      <th>month</th>\n",
+       "      <th>month_name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>year_month</th>\n",
+       "      <th>sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>194095</td>\n",
+       "      <td>Wired Headphones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.99</td>\n",
+       "      <td>2019-05-16 17:14:00</td>\n",
+       "      <td>669 2nd St, New York City, NY 10001</td>\n",
+       "      <td>5</td>\n",
+       "      <td>May</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-05</td>\n",
+       "      <td>11.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>194096</td>\n",
+       "      <td>AA Batteries (4-pack)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>2019-05-19 14:43:00</td>\n",
+       "      <td>844 Walnut St, Dallas, TX 75001</td>\n",
+       "      <td>5</td>\n",
+       "      <td>May</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-05</td>\n",
+       "      <td>3.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>194097</td>\n",
+       "      <td>27in FHD Monitor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>149.99</td>\n",
+       "      <td>2019-05-24 11:36:00</td>\n",
+       "      <td>164 Madison St, New York City, NY 10001</td>\n",
+       "      <td>5</td>\n",
+       "      <td>May</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-05</td>\n",
+       "      <td>149.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>194098</td>\n",
+       "      <td>Wired Headphones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.99</td>\n",
+       "      <td>2019-05-02 20:40:00</td>\n",
+       "      <td>622 Meadow St, Dallas, TX 75001</td>\n",
+       "      <td>5</td>\n",
+       "      <td>May</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-05</td>\n",
+       "      <td>11.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>194099</td>\n",
+       "      <td>AAA Batteries (4-pack)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>2019-05-11 22:55:00</td>\n",
+       "      <td>17 Church St, Seattle, WA 98101</td>\n",
+       "      <td>5</td>\n",
+       "      <td>May</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-05</td>\n",
+       "      <td>5.98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Order ID                 Product  Quantity Ordered  Price Each  \\\n",
+       "0    194095        Wired Headphones                 1       11.99   \n",
+       "1    194096   AA Batteries (4-pack)                 1        3.84   \n",
+       "2    194097        27in FHD Monitor                 1      149.99   \n",
+       "3    194098        Wired Headphones                 1       11.99   \n",
+       "4    194099  AAA Batteries (4-pack)                 2        2.99   \n",
+       "\n",
+       "           Order Date                         Purchase Address  month  \\\n",
+       "0 2019-05-16 17:14:00      669 2nd St, New York City, NY 10001      5   \n",
+       "1 2019-05-19 14:43:00          844 Walnut St, Dallas, TX 75001      5   \n",
+       "2 2019-05-24 11:36:00  164 Madison St, New York City, NY 10001      5   \n",
+       "3 2019-05-02 20:40:00          622 Meadow St, Dallas, TX 75001      5   \n",
+       "4 2019-05-11 22:55:00          17 Church St, Seattle, WA 98101      5   \n",
+       "\n",
+       "  month_name  year year_month   sales  \n",
+       "0        May  2019    2019-05   11.99  \n",
+       "1        May  2019    2019-05    3.84  \n",
+       "2        May  2019    2019-05  149.99  \n",
+       "3        May  2019    2019-05   11.99  \n",
+       "4        May  2019    2019-05    5.98  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Change datatypes\n",
-    "df[\"Order ID\"] = df[\"Order ID\"].astype(int)\n",
-    "df[\"Quantity Ordered\"] = df[\"Quantity Ordered\"].astype(int)\n",
-    "df[\"Price Each\"] = df[\"Price Each\"].astype(float)\n",
-    "df[\"Order Date\"] = df[\"Order Date\"].strftime(\"%m/%d/%y %H:%M\")"
+    "df.head()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Trend of Number of Orders and Sales by Month"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
