--- a/product_sales_analysis_notebook.ipynb
+++ b/product_sales_analysis_notebook.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,8 +46,12 @@
     "import numpy as np\n",
     "import os\n",
     "import glob\n",
+    "import warnings\n",
     "\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "\n",
+    "pd.set_option('display.float_format', lambda x: '%.3f' % x)\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -397,9 +401,9 @@
    "outputs": [],
    "source": [
     "# Change datatypes\n",
-    "df[\"Order ID\"] = df[\"Order ID\"].astype('int')\n",
-    "df[\"Quantity Ordered\"] = df[\"Quantity Ordered\"].astype('int')\n",
-    "df[\"Price Each\"] = df[\"Price Each\"].astype('float')\n",
+    "df[\"Order ID\"] = pd.to_numeric(df[\"Order ID\"])\n",
+    "df[\"Quantity Ordered\"] = pd.to_numeric(df[\"Quantity Ordered\"])\n",
+    "df[\"Price Each\"] = pd.to_numeric(df[\"Price Each\"])\n",
     "df[\"Order Date\"] = pd.to_datetime(df['Order Date'], format='%m/%d/%y %H:%M')"
    ]
   },
@@ -437,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -572,13 +576,164 @@
        "4        May  2019    2019-05    5.98  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Exploration\n",
+    "### Descriptive Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>185686.000</td>\n",
+       "      <td>185686.000</td>\n",
+       "      <td>185686.000</td>\n",
+       "      <td>185686.000</td>\n",
+       "      <td>185686.000</td>\n",
+       "      <td>185686.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>230411.376</td>\n",
+       "      <td>1.125</td>\n",
+       "      <td>184.519</td>\n",
+       "      <td>7.059</td>\n",
+       "      <td>2019.000</td>\n",
+       "      <td>185.612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>51511.717</td>\n",
+       "      <td>0.443</td>\n",
+       "      <td>332.844</td>\n",
+       "      <td>3.503</td>\n",
+       "      <td>0.014</td>\n",
+       "      <td>333.032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>141234.000</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>2.990</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>2019.000</td>\n",
+       "      <td>2.990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>185833.250</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>11.950</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>2019.000</td>\n",
+       "      <td>11.950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>230354.500</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>14.950</td>\n",
+       "      <td>7.000</td>\n",
+       "      <td>2019.000</td>\n",
+       "      <td>14.950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>275028.750</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>150.000</td>\n",
+       "      <td>10.000</td>\n",
+       "      <td>2019.000</td>\n",
+       "      <td>150.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>319670.000</td>\n",
+       "      <td>9.000</td>\n",
+       "      <td>1700.000</td>\n",
+       "      <td>12.000</td>\n",
+       "      <td>2020.000</td>\n",
+       "      <td>3400.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Order ID  Quantity Ordered  Price Each      month       year  \\\n",
+       "count 185686.000        185686.000  185686.000 185686.000 185686.000   \n",
+       "mean  230411.376             1.125     184.519      7.059   2019.000   \n",
+       "std    51511.717             0.443     332.844      3.503      0.014   \n",
+       "min   141234.000             1.000       2.990      1.000   2019.000   \n",
+       "25%   185833.250             1.000      11.950      4.000   2019.000   \n",
+       "50%   230354.500             1.000      14.950      7.000   2019.000   \n",
+       "75%   275028.750             1.000     150.000     10.000   2019.000   \n",
+       "max   319670.000             9.000    1700.000     12.000   2020.000   \n",
+       "\n",
+       "           sales  \n",
+       "count 185686.000  \n",
+       "mean     185.612  \n",
+       "std      333.032  \n",
+       "min        2.990  \n",
+       "25%       11.950  \n",
+       "50%       14.950  \n",
+       "75%      150.000  \n",
+       "max     3400.000  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
    ]
   },
   {
